--- a/css/styles.css
+++ b/css/styles.css
@@ -3378,13 +3378,23 @@ img.u-pull-left {
  * -------------------------------------------------------------------- */
 .s-intro__scroll {
     z-index          : 3;
-    width            : 250px;
+    width            : 320px;
     transform        : rotate(-90deg);
     transform-origin : bottom left;
     position         : absolute;
     left             : calc(100% - 4.8rem);
     bottom           : 0;
 }
+
+/* ------------ Chris custom CSS to add a down cirlcle ------------------ */
+.s-intro__scroll #downArrowCircle { 
+    transform: rotate(0.25turn);
+    width: 3em;
+    height: 3em;
+    position: relative;
+    top: 1.1em;
+}
+
 
 .s-intro__scroll a {
     display        : block;
@@ -3482,6 +3492,8 @@ img.u-pull-left {
         transition-delay : 1s;
     }
 }
+
+
 
 /* ------------------------------------------------------------------- 
  * responsive:
