Tweaks to css and img - Lighthouse

--- a/css/styles.css
+++ b/css/styles.css
@@ -2948,7 +2948,7 @@ img.u-pull-left {
     bottom              : 0;
     width               : 100%;
     height              : 100%;
-    background-image    : url(../images/matterhorn-small.png);
+    background-image    : url(../images/matterhorn-small.webp);
     background-repeat   : no-repeat;
     background-position : center;
     background-size     : cover;
