--- a/css/styles.css
+++ b/css/styles.css
@@ -1324,7 +1324,7 @@ h2, .h2 {
 }
 
 h3, .h3 {
-    font-size   : var(--text-xl);
+    font-size   : var(--text-lg);
     line-height : var(--vspace-1_25);
 }
 
@@ -3277,6 +3277,7 @@ img.u-pull-left {
 
 .ss-modal h4 {
     margin-top : 0;
+    
 }
 
 .ss-modal svg {
